envoy/kubernetes-envoy/rate-limit/front-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/dev/stdout"
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              rate_limits:
                - stage: 0
                  actions:
                     - remote_address: {}
              routes:
#              - match:
#                  prefix: "/envoy.service.ratelimit.v2.RateLimitService/ShouldRateLimit"
#                route:
#                  cluster: rate_limit_cluster
#                  timeout: 25s
              - match:
                  prefix: "/service/1"
                route:
                  cluster: service1
              - match:
                  prefix: "/service/2"
                route:
                  cluster: service2
          http_filters:
          - name: envoy.rate_limit
            config:
                stage: 0
                domain: rate_per_ip
          - name: envoy.router
            config: {}
  clusters:
  - name: rate_limit_cluster
    type: logical_dns
    connect_timeout: 3s
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    hosts: [{ socket_address: { address: rate-limit-server, port_value: 8081 }}]
  - name: service1
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: service1
        port_value: 80
  - name: service2
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: service2
        port_value: 80
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
rate_limit_service:
   use_data_plane_proto: true 
   grpc_service:
        envoy_grpc:
            cluster_name: rate_limit_cluster
        timeout: 2s
